# Utilities

./: .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
fuutilities/: CMakeLists.txt  property.hpp  time_manager.hpp
fuutilities/ai/: CMakeLists.txt  activation.cpp  activation.hpp  perceptron.cpp
fuutilities/ai/neural_network/: CMakeLists.txt  mlpmodel.cpp
fuutilities/multithread/: spinlock.cpp  task.cpp
include/: binary.hpp  checkleak.hpp  derived.hpp  property.hpp  singleton.hpp
include/ai/: neuralnetwork.hpp  perceptron.hpp
include/ai/neuralnetwork/: dqlmodel.hpp  dqnetwork.hpp  mlpmodel.hpp  mlpnetwork.hpp
include/containers/: circulat_buffer.hpp  queue.hpp
include/multithread/: spinlock.hpp  task.hpp  threadpool.hpp
lib/: CMakeLists.txt  checkleak.hpp  input_manager.hpp  time_manager.hpp
lib/ai/: CMakeLists.txt  perceptron.hpp
lib/ai/neural_network/: CMakeLists.txt  mlpmodel.cpp  mlpmodel.hpp
lib/binary/: CMakeLists.txt  bitstream.hpp  dynamic_library_loader.cpp  dynamic_library_loader.hpp  reader.hpp
lib/containers/: CMakeLists.txt  rawtext.cpp
lib/multithread/: CMakeLists.txt  global_threadpool.hpp  task.cpp  threadpool.cpp  threadpool.hpp
src/ai/: activation.cpp  perceptron.cpp
src/ai/neuralnetwork/: mlpmodel.cpp
src/multithread/: spinlock.cpp  threadpool.cpp
test/: CMakeLists.txt  main.cpp  test_neural_network.cpp  test_perceptron.cpp  test_property.cpp  test_threadpool.cpp  test_time_manager.cpp
